--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
 html,
 
 body {
-  background-image: url("image/forest.png");
+  background-image: url("https://BananaMaster21.github.io/IllusionForest.github.io/image/forest.png");
 }
 #title {  
   text-align: center;
