--- a/style/main.css
+++ b/style/main.css
@@ -11,3 +11,11 @@ body {
   position: absolute;
   left: 40vw
 }
+.canvases{
+  background-color: white;
+  width: 1300;
+  height: 700;
+  
+  position: absolute;
+  left: 40px;
+}
