--- a/style/main.css
+++ b/style/main.css
@@ -15,13 +15,13 @@ body {
 }
 #startButton {
   position: absolute;
-  left: 40vw
+  left: 40vw;
 }
 .canvases{
   background-color: white;
   
   position: absolute;
-  top: 0;
+  top: 200vh;
   left: 0;
   width: 100vw;
   height: 100vh;
