--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,7 @@ body {
   overflow: hidden;
 }
 #startScreen {
-  background-image: url("https://BananaMaster21.github.io/IllusionForest.github.io/image/forest.png");
+  background-image: url("https://BananaMaster21.github.io/IllusionForest.github.io/image/intro.png");
   
   width: 100vw;
   height: 100vh;
