--- a/style/main.css
+++ b/style/main.css
@@ -1,30 +1,1 @@
-html,
-
-body {
-  background-color: forestgreen;
-  margin: 0px;
-  
-  overflow: hidden;
-}
-#startScreen {
-  background-image: url("https://BananaMaster21.github.io/IllusionForest.github.io/image/intro.png");
-  
-  width: 100vw;
-  height: 100vh;
-}
-#title {  
-  text-align: center;
-  font-size: 4em;
-}
-#startButton {
-  position: absolute;
-  left: 40vw;
-  width: 20vw;
-  height: 40vh;
-}
-.canvases{
-  background-color: white;
-  
-  position: absolute;
-  top: 200vh;
-}
+body{margin:0;overflow:hidden}#startScreen{background-image:url(https://BananaMaster21.github.io/IllusionForest.github.io/image/intro.png);width:100vw;height:100vh}#title{text-align:center;font-size:4em}#startButton{position:absolute;left:40vw;width:20vw;height:40vh}.canvases{position:absolute;top:200vh}
